--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Abner Sul",
   "license": "ISC",
   "dependencies": {
+    "parcel": "^2.8.3",
     "yup": "^1.1.1"
   },
   "devDependencies": {
